Updated css to fix projects display on mobile

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -16,11 +16,12 @@
 }
 
 .side-by-side {
-    display: grid;
-    grid-template-columns: 20ch 50ch 5ch;
-    /* flex-direction: row; */
+    display: flex;
+    /* grid-template-columns: repeat(auto-fill, 20px); */
+    flex-wrap: wrap;
+    flex-direction: row;
     /* align-content: space-between; */
-    overflow: hidden;
+    /* overflow: hidden; */
     gap: 0px;
     font-size: 24px;
     /* text-align: center; */
@@ -31,7 +32,7 @@
 }
 
 .project-p-width {
-    width: 50ch;
+    width: 60ch;
     text-align: left;
 }
 
